force-app/main/default/objects/Opportunity/fields/npsp__Primary_Contact_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Primary_Contact_Campaign_Member_Status__c</fullName>
    <description>The status NPSP uses when it creates a Campaign Member for this Opportunity&apos;s Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</description>
    <inlineHelpText>El estado a usar al crear un miembro de campaña para el contacto principal y el origen de campaña de esta oportunidad. Deje en blanco para ir por defecto a un estado respondido para una op. cerrada ganada, y un estado no respondido para otras op.</inlineHelpText>
    <label>Primary Contact Campaign Member Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>