force-app/main/default/objects/Opportunity/recordTypes/Historical.recordType-meta.xml
<RecordType>
    <fullName>Historical</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <label>Historical</label>
</RecordType>