force-app/main/default/objects/Opportunity/recordTypes/In_Kind_Gift.recordType-meta.xml
<RecordType>
    <fullName>In_Kind_Gift</fullName>
    <active>true</active>
    <businessProcess>In-Kind Gift</businessProcess>
    <description>Goods or Services received as In-Kind</description>
    <label>In-Kind Gift</label>
</RecordType>