force-app/main/default/objects/Opportunity/recordTypes/Legacy.recordType-meta.xml
<RecordType>
    <fullName>Legacy</fullName>
    <active>true</active>
    <businessProcess>Testamentos%26Herencias</businessProcess>
    <description>Opportunity committed without Payment</description>
    <label>Legacy</label>
</RecordType>