force-app/main/default/objects/Opportunity/validationRules/MSF_MotivoDePerdida.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_MotivoDePerdida</fullName>
    <active>true</active>
    <errorConditionFormula>IsClosed &amp;&amp; !IsWon &amp;&amp;  ISPICKVAL(StageName, &apos;Perdida o Rechazada&apos;) &amp;&amp; ISBLANK(TEXT(msf_ReasonLoss__c))</errorConditionFormula>
    <errorDisplayField>msf_ReasonLoss__c</errorDisplayField>
    <errorMessage>Para la etapa actual, es obligatorio indicar el motivo de la pérdida/rechazo.</errorMessage>
</ValidationRule>