force-app/main/default/objects/Opportunity/validationRules/MSF_Opportunity_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_Opportunity_Name</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(Name, &quot;[a-zA-Z0-9\\s,/?:&apos;()+.-]+&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>El nombre de la oportunidad contiene caracteres no permitidos.</errorMessage>
</ValidationRule>