force-app/main/default/objects/Opportunity/validationRules/MSF_OpportunitySMSDonor.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_OpportunitySMSDonor</fullName>
    <active>true</active>
    <description>Las oportunidades de tipo &apos;SMS Donor&apos; solo se pueden cerrar como &apos;SMS Donor cerrada&apos;.</description>
    <errorConditionFormula>!ISPICKVAL(StageName , &apos;SMS Donor cerrada&apos;) &amp;&amp; IsClosed &amp;&amp; ISPICKVAL(Type , &apos;SMS Donor&apos;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Las oportunidades de tipo &apos;SMS Donor&apos; solo se pueden cerrar como &apos;SMS Donor cerrada&apos;.</errorMessage>
</ValidationRule>