force-app/main/default/objects/Opportunity/validationRules/MSF_Pago_de_herencia.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_Pago_de_herencia</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Legacy&apos; &amp;&amp;  !ISPICKVAL(Type, &apos;Pago de Herencia&apos;) &amp;&amp; !ISBLANK(msf_LegacyOpportunity__c)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Esta oportunidad esta relacionada con una Herencia, de modo que solo puede ser de tipo &apos;Pago de Herencia&apos;.</errorMessage>
</ValidationRule>