force-app/main/default/objects/Opportunity/validationRules/MSF_PaymentProcessor.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_PaymentProcessor</fullName>
    <active>true</active>
    <description>Payment processor is required when opportunity is won.</description>
    <errorConditionFormula>RecordType.DeveloperName != &apos;Historical&apos; &amp;&amp;ISBLANK( TEXT( npsp4hub__Payment_Processor__c ) ) &amp;&amp; 
(ISPICKVAL(StageName , &apos;Cobrada&apos;) || ISPICKVAL(StageName , &apos;Puesta al cobro&apos;) || ISPICKVAL(StageName , &apos;Devuelta&apos;))</errorConditionFormula>
    <errorDisplayField>npsp4hub__Payment_Processor__c</errorDisplayField>
    <errorMessage>No es posible poner al cobro o cobrar una oportunidad sin proceso de pago.</errorMessage>
</ValidationRule>