force-app/main/default/objects/Opportunity/validationRules/MSF_PaymentProfile.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_PaymentProfile</fullName>
    <active>true</active>
    <description>Payment profile is required when opportunity is won for some cases from payment method.</description>
    <errorConditionFormula>(!ISBLANK(TEXT(npsp4hub__Payment_Method__c)))
&amp;&amp;
( 
  (
	  (
		(
		  (ISPICKVAL(npsp4hub__Payment_Method__c, &apos;Direct Debit&apos;) || ISPICKVAL(npsp4hub__Payment_Method__c, &apos;TALÓN BANCARIO ESTÁNDAR&apos;)|| ISPICKVAL(npsp4hub__Payment_Method__c, &apos;PAGARÉS&apos;) 
		  ) 
		  &amp;&amp; npsp4hub__Payment_Profile__r.RecordType.DeveloperName != &apos;IBAN&apos;  
		) 
		||
		!ISBLANK(npsp4hub__Payment_Profile__c) &amp;&amp; npsp__Primary_Contact__c != npsp4hub__Payment_Profile__r.cpm__Contact__c 
	  )
	  &amp;&amp; (ISPICKVAL(StageName , &apos;Cobrada&apos;) || ISPICKVAL(StageName , &apos;Puesta al cobro&apos;))
  )
  || 
    (ISPICKVAL(npsp4hub__Payment_Method__c, &apos;CreditCard&apos;) &amp;&amp; npsp4hub__Payment_Profile__r.RecordType.DeveloperName != &apos;Credit_Card&apos; &amp;&amp; ISPICKVAL(StageName , &apos;Cobrada&apos;) ))</errorConditionFormula>
    <errorDisplayField>npsp4hub__Payment_Profile__c</errorDisplayField>
    <errorMessage>No es posible poner al cobro o cobrar una oportunidad sin datos económicos o son incorrectos.</errorMessage>
</ValidationRule>