force-app/main/default/objects/Opportunity/validationRules/MSF_PrimaryContact.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_PrimaryContact</fullName>
    <active>true</active>
    <description>El contacto principal de la oportunidad no puede ser un contacto de organización.</description>
    <errorConditionFormula>!ISBLANK(npsp__Primary_Contact__c) &amp;&amp; 
npsp__Primary_Contact__r.RecordType.DeveloperName = &apos;Organization_Contact&apos;</errorConditionFormula>
    <errorDisplayField>npsp__Primary_Contact__c</errorDisplayField>
    <errorMessage>El contacto principal de la oportunidad no puede ser un contacto de organización.</errorMessage>
</ValidationRule>