force-app/main/default/objects/Opportunity/listViews/B_squeda_de_oportunidades.listView-meta.xml
<ListView>
    <fullName>B_squeda_de_oportunidades</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp4hub__Payment_Method__c</field>
        <operation>equals</operation>
        <value>TRANSFERENCIA BANCARIA</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>equals</operation>
        <value>322,65</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/1/2021</value>
    </filters>
    <label>Búsqueda de oportunidades</label>
    <sharedTo>
        <role>MSF</role>
    </sharedTo>
</ListView>